Create seperate newletter component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import CallToAction from '@/components/CallToAction.astro';
 import Hero from '@/components/Hero.astro';
 import Icon from '@/components/Icon.astro';
 import Layout from '@/components/Layout.astro';
+import Newsletter from '@/components/Newsletter.astro';
 import { SITE_CONFIG } from '@/config/site';
 import { Image } from 'astro:assets';
 ---
@@ -237,4 +238,6 @@ import { Image } from 'astro:assets';
     primaryButtonText="Book a Tour"
     sectionId="ready-for-adventure"
   />
+
+  <Newsletter />
 </Layout>
