--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -177,10 +177,10 @@ if (backgroundImage) {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100vw;
-    height: 56.25vw; /* 16:9 aspect ratio */
+    width: 100%;
+    height: 100%;
     min-height: 100vh;
-    min-width: 177.78vh; /* 16:9 aspect ratio */
+    min-width: 100vw;
     transform: translate(-50%, -50%);
     object-fit: cover; /* For HTML5 video elements */
   }
