Fix console warninsg and errors

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -52,6 +52,7 @@ if (backgroundImage) {
         preload="metadata"
         disablepictureinpicture
         webkit-playsinline
+        crossorigin="anonymous"
       >
         <source src={`${backgroundVideoLocal}-720p.mp4`} type="video/mp4" media="(max-width: 768px)" />
         <source src={`${backgroundVideoLocal}-1080p.mp4`} type="video/mp4" />
