--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -208,6 +208,7 @@ import { Image } from 'astro:assets';
           poster={videoPoster.src}
           class="w-full h-auto"
           preload="metadata"
+          crossorigin="anonymous"
           aria-describedby="video-description">
           <source
             src="/Anybody-Paddlesports-Sample-Video-1080p.mp4"
